# Wisebite

./: .gitignore  BACKGROUND_NOTIFICATIONS_GUIDE.md  PRODUCTION_FEATURES_IMPLEMENTATION.md  QUICK_START.md  README.md  SETUP_GUIDE_VI.md  enhanced_models_proposal.py
backend/: .env.example  API_DOCUMENTATION_FOR_ANDROID.md  Dockerfile  MERCHANT_FOOD_SYSTEM_STATUS.txt  QUICK_REFERENCE.md  RADIUS_SEARCH_FEATURE.md  README.md  SETUP.md  alembic.ini  api-documentation.json  check-health.ps1  debug-users-simple.ps1  debug-users.ps1  docker-compose.test.yml  docker-compose.yml  fix_paths.py  google_oauth_setup.env  init_db.py  manual_migration.sql  populate_store.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  reset-database.ps1  run-tests.ps1  run_comprehensive_tests.py  setup-db.bat  setup-db.ps1  setup-db.sh  setup-easy.bat  setup-easy.ps1  simple-test.ps1  test-api.ps1  test-login-credentials.ps1  test_forgot_password_api.http  test_google_phone_link.md  test_order_serialization.py  test_orders_api.py  test_simple_food_item.py
backend/alembic/: env.py
backend/alembic/versions/: add_categories_inventory.py
backend/app/: crud.py  main.py  models.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  db.py  security.py
backend/app/schemas/: auth.py  category.py  chat.py  common.py  food_item.py  notification.py  order.py  review.py  route.py  store.py  surprise_bag.py  transaction.py  (+1 more)
backend/docs/: API_DOCUMENTATION.md  TESTING_GUIDE.md
backend/scripts/: populate_categories.py
backend/tests/: COMPREHENSIVE_TESTING.md  README.md  __init__.py  conftest.py  conftest_simple.py  conftest_sqlite.py  test_mapbox_integration.py  test_setup.py  utils.py
(+194 files in other folders)
